# ScienceDirect2MarkDown

./: .gitignore  .gitmodules  README.md  pyproject.toml  requirements.txt
src/sciencedirect2markdown/: glyph_match.py  streamlitweb.py
tests/: test_converter.py
