[project]
name = "ScienceDirect2MarkDown"
version = "0.0.1"
description = "It can convert json from ScienceDirect to MarkDown with some support of styles."
authors = [
    {name = "Ovler", email = "ovlertheyoung@gmail.com"},
]
dependencies = ["streamlit>=1.40.2", "lxml>=5.3.0", "pytest>=8.3.4", "pytest-cov>=6.0.0"]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
